local/conduktor/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skala-conduktor
spec:
  selector:
    app: skala-conduktor
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
