local/conduktor/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: skala-conduktor-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: conduktor.cloud.skala-edu.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: skala-conduktor
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - conduktor.cloud.skala-edu.skala-ai.com
    secretName: skala-conduktor-tls-secret
